[package]
authors = ["MathxH Chen <brainfvck@foxmail.com>"]
name = "container"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.23.0"
anyhow = "1.0"
thiserror = "1.0"
unshare = "0.7.0"
which = "4.2.5"
