[package]
authors = ["MathxH Chen <brainfvck@foxmail.com>"]
name = "container"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.23.0"
anyhow = "1.0"
thiserror = "1.0"
unshare = "0.7.0"
users = "0.11.0"
log = "0.4.14"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
