[package]
name = "demo"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unshare = "0.7.0"
cgroups-rs = "0.2.6"

[[bin]]
name = "ns"
path = "src/namespace.rs"

[[bin]]
name = "cg"
path = "src/cgroups.rs"

